# RAScanner

./: .gitignore  CMakeLists.txt  RAScanner.slnx
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  RAScanner.vcxproj
src/RAScanner/x64/Debug/qt/qmake/443a98ac17594153b69ca8836b2a0018/: qtvars.vcxproj
